Mon Oct 11 23:35:19 1999  Jeffrey A Law  (law@cygnus.com)

	Fri Sep  3 09:14:32 1999  Marc Espie <espie@tetto.liafa.jussieu.fr>
	* tlink.c (scan_linker_output): Skip the initial underscore in
	a mangled name if appropriate.

	Fri Aug 27 19:19:43 CEST 1999	Marc Espie <espie@cvs.openbsd.org>
	* config/openbsd.h (SET_ASM_OP): Define.

	Mon Oct  4 08:54:12 1999  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
	* cppinit.c (is_idchar initializer): Loosen tests to accept
	gcc 2.>6 and >2.

	Tue Jun 29 01:37:53 1999  Jeffrey A Law  (law@cygnus.com)
	* pa.h (CPP_SPEC): Conditionally add -D__STDC_EXT__ to the cpp
	command line.

	Thu Sep  2 20:08:23 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
	* regmove.c (fixup_match_1): Don't change an unchanging register.
	(stable_but_for_p): Renamed to:
	(stable_and_no_regs_but_for_p).  Reject unchanging registers too.
	Changed all callers.

	Tue Aug 17 22:06:11 1999  Jan Hubicka  <hubicka@freesoft.cz>
	* haifa-sched.c (insn_unit): Fix typo on out of range test.
	* sched.c (insn_unit): Likewise.

Sun Oct 10 20:58:27 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.md (scc patterns): Disable most SImode variants if
	TARGET_POWERPC64.
	* rs6000.c (expand_block_move): Fix gen_movsi typos.

	Thu Oct  7 23:06:50 1999  Richard Henderson  <rth@cygnus.com>
	* rs6000.md (fix_truncdfsi2_internal+1): Emit a clobber
	before the fctiwz insn.

	Thu Oct  7 00:36:17 1999  Diego Novillo  <dnovillo@cygnus.com>
	* config/rs6000/rs6000.c (secondary_reload_class): For TARGET_ELF
	make sure that HIGH instructions are copied into BASE_REGS.
	
Thu Sep 30 05:40:34 1999  Richard Earnshaw <rearnsha@arm.com>

	* c-lang.c (finish_file case ndef ASM_OUTPUT_{CON,DE}STRUCTOR): 
	Correctly build argument list to constructor and destructor functions.

Wed Sep 22 17:55:31 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.c (expand_block_move): DImode loads and stores require
	word-aligned displacements.  Increment address registers with